Fixed align issue in css

--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ body {
 
 .center {
   margin: auto;
-  width: 50%;
+  width: 80%;
   padding: 10px;
 }
 
@@ -114,6 +114,7 @@ section {
 h1 {
   font-size: 35px;
   color: var(--secondary);
+  text-align: center;
 }
 h2,
 h3,
@@ -121,13 +122,13 @@ h4,
 h5,
 h6 {
   color: var(--primary);
+  text-align: center;
 }
 
 p,
 span {
   font-size: 18px;
   color: var(--text);
-  text-align: center;
 }
 
 a {
@@ -138,24 +139,14 @@ html {
   scroll-behavior: smooth;
 }
 
-.home-section h1 {
-  text-align: center;
-}
-
-.home-section p {
+.home-section {
   text-align: left;
   text-justify: auto;
   width: 80%;
   margin-left: 2%;
 }
 
-.about h1 {
-  text-align: center;
-  width: 80%;
-  min-width: 50%;
-}
-
-.about > p {
+.about-section > p {
   text-align: left;
   text-justify: auto;
   margin-left: 2%;
